--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>cn.com.ogtwelve</groupId>
     <artifactId>OGTwelveUtilPack</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.5</version>
     <name>cn.com.ogtwelve:OGTwelveUtilPack</name>
     <description>OGTwelveUtilPack</description>
     <licenses>
@@ -90,6 +90,11 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
             <version>8.0.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-joda</artifactId>
+            <version>2.13.4</version>
         </dependency>
     </dependencies>
 
