调整springboot控制台多余内容bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 logging.level.org.springframework.boot.autoconfigure.logging.ConditionEvaluationReportLoggingListener=INFO
 
+# application.properties
+logging.level.root=WARN
+logging.level.org.springframework.web=DEBUG
+logging.level.cn.com.ogtwelve=INFO
+
