--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ logging.level.root=WARN
 logging.level.org.springframework.web=DEBUG
 logging.level.cn.com.ogtwelve=INFO
 
+# ipconfig /flushdns
+# git config --global --unset http.proxy
+# git config --global --unset https.proxy
