--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,11 @@ logging.level.root=WARN
 logging.level.org.springframework.web=DEBUG
 logging.level.cn.com.ogtwelve=INFO
 
+#openai.token=
+#openai.proxyHost=127.0.0.1
+#openai.proxyPort=4780
+#openai.sessionExpirationTime=30
+
 # ipconfig /flushdns
 # git config --global --unset http.proxy
 # git config --global --unset https.proxy
