--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ logging.level.root=WARN
 logging.level.org.springframework.web=DEBUG
 logging.level.cn.com.ogtwelve=INFO
 
-#openai.token=
+#openai.token=123
 #openai.proxyHost=127.0.0.1
 #openai.proxyPort=4780
 #openai.sessionExpirationTime=30
